--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,10 @@
     "**/node_modules": true,
     "**/bower_components": true,
     "**/.sfdx": true
-  }
+  },
+   // 以下开始三行配置salesforce测试
+   "salesforcedx-vscode-apex.java.home":"C:\\Program Files\\Java\\jdk-11",
+   "salesforcedx-vscode-core.show-cli-success-msg": true,
+   "salesforcedx-vscode-core.retrieve-test-code-coverage":true
+   // 以上三行配置salesforce测试
 }
